# robotics-101

./: MazeSolution.cpp  README.md
3D LiDAR-Livox MID360/: README.md
Intel Realsense D455/: README.md
Iterative-Closest-Point/: README.md
Iterative-Closest-Point/17-dec/hokuyo3_ws/: temp_data_pub_scan.txt
Iterative-Closest-Point/17-dec/hokuyo3_ws/install/: setup.sh
Iterative-Closest-Point/17-dec/hokuyo3_ws/install/icp_node/share/icp_node/: local_setup.dsv
Iterative-Closest-Point/17-dec/hokuyo3_ws/install/laser_to_pc/lib/laser_to_pc/: fixed_map_rviz
Iterative-Closest-Point/17-dec/hokuyo3_ws/install/laser_to_pc/share/laser_to_pc/: local_setup.bash  package.dsv  package.ps1
Iterative-Closest-Point/17-dec/hokuyo3_ws/install/lslidar_driver/share/lslidar_driver/: local_setup.bash
Iterative-Closest-Point/17-dec/hokuyo3_ws/install/lslidar_msgs/share/lslidar_msgs/: local_setup.dsv  local_setup.sh
Iterative-Closest-Point/17-dec/hokuyo3_ws/log/: latest_build
Iterative-Closest-Point/17-dec/hokuyo3_ws/src/icp_node/src/: scan_localizer2.cpp
Iterative-Closest-Point/17-dec/hokuyo3_ws/src/laser_to_pc/: CMakeLists.txt
Iterative-Closest-Point/17-dec/hokuyo3_ws/src/laser_to_pc/src/: laser_to_pointcloud.cpp  rotation_translation.py
Iterative-Closest-Point/20-feb/hokuyo3_ws/laser_to_pc/: CMakeLists.txt
Iterative-Closest-Point/20-feb/hokuyo3_ws/laser_to_pc/src/: fixed_map_rviz.cpp  fuse_odom_lidar.cpp  icp_publish.cpp
Iterative-Closest-Point/21-jan/hokuyo3_ws/: temp_data_pub_scan.txt
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/icp_node/lib/icp_node/: icp_node
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/icp_node/share/icp_node/: package.sh
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/laser_to_pc/lib/laser_to_pc/: icp_publish  wr_lidar_eth
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/laser_to_pc/share/laser_to_pc/: local_setup.zsh
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/lslidar_driver/lib/lslidar_driver/: lslidar_driver_node
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/lslidar_driver/share/lslidar_driver/: local_setup.zsh  package.xml
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/lslidar_msgs/share/lslidar_msgs/: local_setup.bash  local_setup.zsh
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/pclomp/share/pclomp/: package.sh  package.zsh
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/ros2_cppserial/share/ros2_cppserial/: package.bash  package.zsh
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/ros2_serial_interfaces/share/ros2_serial_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/serial/include/serial/: serial.h  v8stdint.h
Iterative-Closest-Point/21-jan/hokuyo3_ws/install/serial/share/serial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  (+2 more)
Iterative-Closest-Point/21-jan/hokuyo3_ws/log/: latest_build
Iterative-Closest-Point/21-jan/hokuyo3_ws/src/icp_node/: CMakeLists.txt
Iterative-Closest-Point/21-jan/hokuyo3_ws/src/laser_to_pc/: CMakeLists.txt
Iterative-Closest-Point/21-jan/hokuyo3_ws/src/laser_to_pc/src/: fixed_map_rviz.cpp  icp_publish.cpp  wr_lidar_eth.cpp
Iterative-Closest-Point/4-feb/: CMakeLists.txt  laser_pointcloud.txt
Iterative-Closest-Point/4-feb/src/: icp_publish.cpp  laser_to_pointcloud.cpp  wr_lidar.cpp
Iterative-Closest-Point/7-dec/hokuyo3_ws/: laser_pointcloud.txt
Iterative-Closest-Point/7-dec/hokuyo3_ws/log/: latest_build
Iterative-Closest-Point/7-dec/hokuyo3_ws/src/icp_node/: package.xml
Iterative-Closest-Point/7-dec/hokuyo3_ws/src/icp_node/src/: map_builder.cpp  scan_localizer.cpp
Iterative-Closest-Point/7-dec/hokuyo3_ws/src/laser_to_pc/: CMakeLists.txt  package.xml
Iterative-Closest-Point/docs/: doc.md
Iterative-Closest-Point/hokuyo3_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
Iterative-Closest-Point/hokuyo3_ws/install/icp_node/share/icp_node/: local_setup.bash  local_setup.sh  package.bash  package.dsv  package.xml
Iterative-Closest-Point/hokuyo3_ws/install/laser_to_pc/lib/laser_to_pc/: laser_to_pointcloud
Iterative-Closest-Point/hokuyo3_ws/install/laser_to_pc/share/laser_to_pc/: local_setup.dsv  local_setup.sh  package.sh
Iterative-Closest-Point/hokuyo3_ws/install/urg_node2/lib/urg_node2/: urg_node2_node
Iterative-Closest-Point/hokuyo3_ws/install/urg_node2/share/urg_node2/: local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Iterative-Closest-Point/hokuyo3_ws/log/: latest_build
Iterative-Closest-Point/hokuyo3_ws/src/icp_node/: CMakeLists.txt
Iterative-Closest-Point/hokuyo3_ws/src/icp_node/src/: map_builder.cpp
Iterative-Closest-Point/hokuyo3_ws/src/laser_to_pc/: CMakeLists.txt
Iterative-Closest-Point/nov/hokuyo3_ws/install/: local_setup.sh
Iterative-Closest-Point/nov/hokuyo3_ws/log/: latest_build
Iterative-Closest-Point/nov/hokuyo3_ws/src/icp_node/: CMakeLists.txt
Iterative-Closest-Point/nov/hokuyo3_ws/src/icp_node/src/: icp_node.cpp
Iterative-Closest-Point/nov/hokuyo3_ws/src/laser_to_pc/: package.xml
Iterative-Closest-Point/nov/hokuyo3_ws/src/laser_to_pc/src/: laser_to_pointcloud.cpp
Maze-DFS/: README.md
Robotics/: Maze-Ver2.cpp  MazeSolution.cpp
Robotics/rody1/: CMakeLists.txt  package.xml
Robotics/rody1/src/controller_node/: controller.cpp
Robotics/rody1/src/main_node/: main.cpp
Robotics/rody1/src/serial_node/: serial.cpp
Robotics/rody1_messages/: CMakeLists.txt  package.xml
Robotics/rody1_messages/msg/: Controller.msg
SLAM/: README.md
SLAM (DLIO)/: README.md
SLAM (FAST-LIO)/: README.md
URDF-ROS2/ROS2/: URDF and XACRO.md  new_robot_urdf.urdf.xacro  robot_gazebo.xacro  robot_physics.xacro  robot_urdf.urdf.xacro  robot_urdf_ver2.urdf.xacro
turtle_ws/devel/: .catkin  .rosinstall
turtle_ws/devel/lib/pkgconfig/: draw_turtle.pc
turtle_ws/devel/share/draw_turtle/cmake/: draw_turtleConfig.cmake
turtle_ws/src/draw_turtle/: CMakeLists.txt
turtle_ws/src/draw_turtle/scripts/: turtle.py
(+231 files in other folders)
